ci: 分别上传 APK 构建产物
此更改更新了 Android 工作流程，以便将每个 APK 文件作为单独的构建产物上传，而不是将它们全部归为一个产物。

这使得从 GitHub Actions 的运行摘要页面直接下载特定的 APK 变得更加容易。

此外，发布版本的 Proguard 映射文件的产物名称也已更新。

Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,20 +48,29 @@ jobs:
           ./gradlew assemble
           ./gradlew bundleRelease
 
-      - name: Upload Release APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: Music Player release
-          path: ./app/build/outputs/apk/release
+      - name: Upload Release APK separately
+        run: |
+          for apk in app/build/outputs/apk/release/*.apk; do
+          name=$(basename "$apk" .apk)
+          echo "Uploading $name"
+          gh run upload-artifact "$GITHUB_RUN_ID" "$apk" --name "$name"
+          done
+        env:
+          GH_TOKEN: ${{ github.token }}
 
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name:  Music Player  Pay debug
-          path: ./app/build/outputs/apk/debug
+      - name: Upload Debug APK separately
+        run: |
+          for apk in app/build/outputs/apk/debug/*.apk; do
+          name=$(basename "$apk" .apk)
+          echo "Uploading $name"
+          gh run upload-artifact "$GITHUB_RUN_ID" "$apk" --name "$name"
+          done
+        env:
+          GH_TOKEN: ${{ github.token }}
+
 
       - name: Upload Release Mapping
         uses: actions/upload-artifact@v4
         with:
-          name:  Music Player mapping
+          name:  Record Echoes mapping
           path: ./app/build/outputs/mapping/release/mapping.txt
