Refactor: 更新依赖并完善国际化
本次提交进行了以下更改：

*   **依赖更新**:
    *   将 Kotlin 版本从 `2.2.20` 升级到 `2.3.0`。

*   **国际化 (i18n)**:
    *   在 `strings.xml` 中，将 `app_name` 和 `default_time` 标记为 `translatable="false"`，以避免不必要的翻译。
    *   更新了 `package_type_explainer` 中的应用名称。
    *   将 `contributors_ghhccghk` 的值从中文 "主要维护者" 修改为英文 "Primary maintainer"。
    *   在 `values-zh-rCN/strings.xml` 中新增、删除和修正了多处中文翻译，提高了本地化质量。

*   **CI/CD**:
    *   优化了 `.github/workflows/android.yml` 文件，改用 `actions/upload-artifact@v4` 和矩阵策略 (matrix strategy) 来上传构建产物 (APKs)，简化了工作流程脚本。

Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,26 +48,19 @@ jobs:
           ./gradlew assemble
           ./gradlew bundleRelease
 
-      - name: Upload Release APK separately
+      - name: Find APKs
+        id: apks
         run: |
-          for apk in app/build/outputs/apk/release/*.apk; do
-          name=$(basename "$apk" .apk)
-          echo "Uploading $name"
-          gh run upload-artifact "$GITHUB_RUN_ID" "$apk" --name "$name"
-          done
-        env:
-          GH_TOKEN: ${{ github.token }}
+          echo "list=$(ls app/build/outputs/apk/release/*.apk | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
-      - name: Upload Debug APK separately
-        run: |
-          for apk in app/build/outputs/apk/debug/*.apk; do
-          name=$(basename "$apk" .apk)
-          echo "Uploading $name"
-          gh run upload-artifact "$GITHUB_RUN_ID" "$apk" --name "$name"
-          done
-        env:
-          GH_TOKEN: ${{ github.token }}
-
+      - name: Upload each APK
+        uses: actions/upload-artifact@v4
+        strategy:
+          matrix:
+            apk: ${{ fromJson(steps.apks.outputs.list) }}
+        with:
+          name: ${{ matrix.apk }}
+          path: ${{ matrix.apk }}
 
       - name: Upload Release Mapping
         uses: actions/upload-artifact@v4
