CI: 简化 Android APK 的上传流程
重构 Android 工作流程，以简化 APK 构建产物的上传。

此更改用两个独立的步骤取代了之前用于查找和上传每个 APK 的矩阵策略，从而分别上传调试和发布版本的 APK。这使得工作流程更清晰、更易于维护。

Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,19 +48,18 @@ jobs:
           ./gradlew assemble
           ./gradlew bundleRelease
 
-      - name: Find APKs
-        id: apks
-        run: |
-          echo "list=$(ls app/build/outputs/apk/release/*.apk | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
-
-      - name: Upload each APK
+      - name: Upload release APKs
         uses: actions/upload-artifact@v4
-        strategy:
-          matrix:
-            apk: ${{ fromJson(steps.apks.outputs.list) }}
         with:
-          name: ${{ matrix.apk }}
-          path: ${{ matrix.apk }}
+          name: Record Echoes release
+          path: ./app/build/outputs/apk/release/*.apk
+
+      - name: Upload debug APKs
+        uses: actions/upload-artifact@v4
+        with:
+          name: Record Echoes debug
+          path: ./app/build/outputs/apk/debug/*.apk
+
 
       - name: Upload Release Mapping
         uses: actions/upload-artifact@v4
